--- a/README.org
+++ b/README.org
@@ -6,8 +6,8 @@
   #+END_SRC
    
   Then install [[https://www.gnu.org/software/stow/][stow]] utility
-  #+BEGIN_SRC sh
-   sudo apt-get install stow
+  #+BEGIN_SRC sh :dir /sudo::
+   apt-get install stow
   #+END_SRC
 
   Run stow to create symlinks
