--- a/README.org
+++ b/README.org
@@ -23,7 +23,7 @@
   stow -d ~/.dotfiles zsh awesome git vim
   #+END_SRC
 * List of software
-  #+BEGIN_SRC sh
+  #+BEGIN_SRC sh :dir /sudo::
   sudo apt-get install firefox git zsh emacs24 awesome rxvt-unicode-256color default-jdk syncthing htop
   sudo apt-get install jq rawdog silversearcher-ag xclip
   #+END_SRC
@@ -31,8 +31,13 @@
 ** firefox plugins
    [[https://github.com/willsALMANJ/pentadactyl-signed/releases/latest][pentadactyl]]
 ** qutebrowser
-#+BEGIN_SRC sh
-  wget -m -l 1 -nd -np https://github.com/qutebrowser/qutebrowser/releases/latest -e robots=off --accept-regex='.*tag.*|.*.deb'
-  wget -m -l 1 -nd -np https://qutebrowser.org/INSTALL.html -A deb 
-  sudo dpkg -i '*.deb'
-#+END_SRC
+   #+BEGIN_SRC sh :dir /sudo::
+   wget -m -l 1 -nd -np https://github.com/qutebrowser/qutebrowser/releases/latest -e robots=off --accept-regex='.*tag.*|.*.deb'
+   wget -m -l 1 -nd -np https://qutebrowser.org/INSTALL.html -A deb 
+   sudo dpkg -i '*.deb'
+   #+END_SRC
+** emacs
+   #+BEGIN_SRC sh :dir /sudo::
+   sudo add-apt-repository ppa:ubuntu-elisp/ppa
+   sudo apt install emacs-snapshot
+   #+END_SRC
