--- a/README.org
+++ b/README.org
@@ -40,7 +40,7 @@
 ** debian software
 #+BEGIN_SRC sh :dir /sudo:: :results none
 # tools
-sudo apt install htop syncthing
+sudo apt install htop syncthing unzip
 
 # desktop environment
 sudo apt install lightdm awesome xkbset maim slop xclip
