--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -117,13 +117,11 @@ Debug icons in modeline, find out their names.
 (load! "org-defuns")
 #+end_src
 ** capture
-#+begin_src shell :tangle ~/.local/bin/emacs-capture
-#!/bin/sh
+#+begin_src shell :tangle ~/.local/bin/emacs-capture :shebang #!/bin/sh
 emacsclient -F '((name . "doom-capture") (height . 10) (width . 80))' "$@"
 #+end_src
 
-#+begin_src python :tangle ~/.local/share/qutebrowser/userscripts/orgprotocol
-#!/usr/bin/env python3
+#+begin_src python :tangle ~/.local/share/qutebrowser/userscripts/orgprotocol :shebang #!/usr/bin/env python3
 import os
 import subprocess
 from urllib.parse import quote
@@ -271,14 +269,53 @@ subprocess.call(['emacs-capture',
                     nil t url)))
 #+end_src
 
-See [[../../qutebrowser/.config/qutebrowser/password_fill_rc]]
+#+begin_src bash :tangle ~/.config/qutebrowser/password_fill_rc
+choose_entry() { file="ok"; true; }
+no_entries_found() {
+    if [ 0 -eq "${#lines[@]}" ]; then
+        die "No entry found for »$simple_url«"
+    fi
+}
+
+open_entry() {
+    local firstline=1
+    for line in "${lines[@]}"; do
+        if ((firstline)) ; then
+            password="$line"
+            firstline=0
+        else
+            if [[ $line =~ $user_pattern ]] ; then
+                # remove the matching prefix "user: " from the beginning of the line
+                username=${line#${BASH_REMATCH[0]}}
+                break
+            fi
+        fi
+    done
+}
+
+query_entries() {
+    url=$(awk -F'[./]' '{print $(NF-1) "." $(NF)}' <<< "$1")
+
+    set +o errexit
+    mapfile -t lines < <(emacsclient -e "(+pass/qute \"$url\")" | jq -r .)
+    set -o errexit
+}
+#+end_src
 
 ** Wrapper for CLI
 #+begin_src elisp
 (defalias '+pass/read-entry #'auth-source-pass--read-entry)
 #+end_src
 
-See [[../.local/bin/pass]]
+#+begin_src sh :tangle ~/.local/bin/pass :shebang #!/bin/sh
+OTHER_PASS=$(which -a pass | fgrep -v $0)
+
+if [ "$1" = "show" ] && [ -n "$DISPLAY" ]; then
+    emacsclient -a false -e "(+pass/read-entry \"$2\")" | xargs echo -ne
+else
+    $OTHER_PASS $@
+fi
+#+end_src
 
 * elfeed
 #+begin_src elisp
@@ -327,8 +364,7 @@ See [[../.local/bin/pass]]
     "go" 'ambrevar/elfeed-visit-or-play-with-mpv))
 #+end_src
 
-#+begin_src sh :tangle ~/.local/bin/qutebrowser-background
-#!/bin/sh
+#+begin_src sh :tangle ~/.local/bin/qutebrowser-background :shebang #!/bin/sh
 qutebrowser --nowindow --target tab-bg-silent $@
 #+end_src
 
