--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -201,6 +201,7 @@ subprocess.call(['emacs-capture',
 
 #+begin_src elisp
 (use-package! calibredb
+  :commands calibredb
   :config
   (setq calibredb-root-dir (expand-file-name "~/Calibre Library")
         calibredb-db-dir (concat calibredb-root-dir "/metadata.db")
@@ -376,13 +377,8 @@ qutebrowser --nowindow --target tab-bg-silent $@
 #+begin_src elisp :tangle packages.el
 (package! dictcc)
 (package! multitran)
-;(package! google-translate)
-;(package! powerthesaurus)
-#+end_src
-
-#+begin_src elisp
-(use-package! dictcc)
-(use-package! multitran)
+(package! google-translate)
+(package! powerthesaurus)
 #+end_src
 * email
 #+begin_src elisp
@@ -437,16 +433,14 @@ qutebrowser --nowindow --target tab-bg-silent $@
            (list (concat ":open -p " url)))))
 
 (setq browse-url-handlers
-      `(("youtu\\.?be" . ,(lambda (url &rest _) (mpv-play-url url)))
-       ; ("^https?://some.addr.com" . browse-url-qute-private)
-        ("." . browse-url-generic)))
+      `(("youtu\\.?be" . ,(lambda (url &rest _) (mpv-play-url url)))))
 
 (setq-default
  browse-url-browser-function 'browse-url-generic
  browse-url-generic-program "qutebrowser")
 
-(use-package! webpaste)
 (use-package! web-search
+  :commands web-search
   :custom
   (web-search-default-provider "DuckDuckGo"))
 #+end_src
@@ -519,12 +513,12 @@ qutebrowser --nowindow --target tab-bg-silent $@
 
 (use-package! openwith
   :hook (after-init . openwith-mode)
-  :config
+  :custom
+  (openwith-associations
+   '(("\\.\\(?:pdf\\|epub\\)\\'" "zathura" (file))
+     ("\\.\\(?:mkv\\|webm\\|avi\\|mp4\\)\\'" "mpv" (file))))
 
-  (setq openwith-associations
-        '(("\\.\\(?:pdf\\|epub\\)\\'" "zathura" (file))
-          ("\\.\\(?:mkv\\|webm\\|avi\\|mp4\\)\\'" "mpv" (file))))
-  ;; (openwith-mode)
+  :config
   ;; Don't ask if file is too large when it'll be handled by openwith-mode.
   (advice-add 'abort-if-file-too-large :before-until
               (lambda (size op-type filename &rest args)
@@ -589,7 +583,6 @@ qutebrowser --nowindow --target tab-bg-silent $@
       exwm-input-global-keys)
 #+end_src
 
-#+RESULTS:
 #+begin_example elisp
 (("s-<tab>" . exwm-jump-to-last-exwm)
  ("s-1" lambda nil
