--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -8,6 +8,9 @@ To define guix dependencies add a source code block with =:noweb-ref guix-pkg :t
  (gnu packages)
  (gnu home))
 (home-environment
+ (services (list
+            <<guix-srv>>
+            ))
  (packages
   (map (compose list specification->package+output)
        '("emacs-next"
@@ -472,6 +475,16 @@ qutebrowser --nowindow --target tab-bg-silent $@
 
 #+begin_src scheme :noweb-ref guix-pkg :tangle no :exports none
 "emacs-eat" "emacs-detached"
+#+end_src
+
+#+begin_src scheme :noweb-ref guix-srv :tangle no :exports none
+(service home-bash-service-type
+         (home-bash-configuration
+          (bashrc
+           (list
+            (plain-file
+             "eat"
+             "[ -n \"$EAT_SHELL_INTEGRATION_DIR\" ] && source \"$EAT_SHELL_INTEGRATION_DIR/bash\"")))))
 #+end_src
 
 #+begin_src elisp
